POM: Bump dependency versions and disable preview features