@@ -16,10 +16,10 @@
     <url>https://github.com/northmaxdev/jep321util</url>
 
     <properties>
-        <java.version>20</java.version>
-        <guava.version>31.1-jre</guava.version> <!-- TODO: Remove this when appropriate -->
+        <java.version>21</java.version>
+        <guava.version>32.1.3-jre</guava.version> <!-- TODO: Remove this when appropriate -->
         <junit.version>5.10.0</junit.version>
-        <equalsverifier.version>3.15.1</equalsverifier.version>
+        <equalsverifier.version>3.15.2</equalsverifier.version>
         <assertj.version>3.24.2</assertj.version>
 
         <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -59,19 +59,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <!-- TODO: Remove this when appropriate -->
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
